fixed spacing

--- a/project-page4/project4.scss
+++ b/project-page4/project4.scss
@@ -301,6 +301,12 @@ $red-clr: orangered;
                 margin-bottom: 2rem;
               }
             }
+            .tech-stack-text {
+              @media screen and (max-width: 768px) {
+                margin-bottom: 2.5rem;
+                margin-top: -20px;
+              }
+            }
           }
           &.first {
             margin-top: 3rem;
